--- a/index.html
+++ b/index.html
@@ -1,18 +1,19 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
   <meta charset="UTF-8">
-  <title>PIN Verification</title>
+  <title>Verificação de PIN</title>
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
   <div class="container">
-    <h1>PIN Verification</h1>
+    <h1>Verificação de PIN</h1>
     <p>Insira um número de pelo menos quatro dígitos:</p>
-    <input type="number" id="userInput" class="input-field">
+    <input type="number" id="entradaUsuario" class="campo-entrada">
     <button onclick="verificarPIN()" class="btn">Verificar</button>
     <button onclick="exibirPIN()" class="btn">Mostrar PIN</button>
-    <p id="pinValue" style="display: none;">O PIN correto é: <span id="pin"></span></p>
+    <p id="valorPIN" style="display: none;">O PIN correto é: <span id="pin"></span></p>
+    <p id="textoAlerta" style="display: none;"></p>
   </div>
 
   <script src="index.js"></script>
