--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <button onclick="exibirPIN()" class="btn">Mostrar PIN</button>
     <p id="valorPIN" style="display: none;">O PIN correto é: <span id="pin"></span></p>
     <p id="textoAlerta" style="display: none;"></p>
-    <p id="diferenca" class="aviso"> ⚠️Obs: A diferença entre "muito maior" para o valor correto é 1000.</p>
+    <p id="diferenca" class="aviso"> ⚠️Obs: A diferença entre "muito maior" para o valor correto é de 1000.</p>
   </div>
 
   <script src="index.js"></script>
